# ssb-agg

./: .clang-format  .gitignore  CMakeLists.txt
analysis/: analysis.ipynb  results.csv
bench/: CMakeLists.txt  bench_queries.cpp
src/: CMakeLists.txt  encode.cpp  encode.hpp  load.cpp  load.hpp  queries.hpp  table.hpp
src/queries/: helpers.hpp  q1_1.cpp  q1_1.hpp  q1_2.cpp  q1_2.hpp  q1_3.cpp  q1_3.hpp  q1_common.cpp  q1_common.hpp  q2_1.cpp  q2_1.hpp  q2_2.cpp  q2_2.hpp  q2_3.cpp  q2_3.hpp  q2_common.cpp  q2_common.hpp  q3_1.cpp  q3_1.hpp  q3_2.cpp  q3_2.hpp  q3_3.cpp  q3_3.hpp  q3_4.cpp  q3_4.hpp  q3_common.cpp  q3_common.hpp  q4_1.cpp  q4_1.hpp  q4_2.cpp  q4_2.hpp  q4_3.cpp  q4_3.hpp  q4_common.hpp
